responsive, teamDetail and README file edited

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "analytics",
         "and",
         "anonymous",
+        "api",
         "app",
         "apple",
         "arrow",
@@ -19,16 +20,21 @@
         "ay",
         "badge",
         "barta",
+        "bash",
         "bc",
         "be",
         "begin",
+        "below",
         "beta",
         "bg",
         "bmbxu",
         "body",
+        "bold",
         "bootstrap",
         "both",
+        "br",
         "brand",
+        "brands",
         "browser",
         "btn",
         "build",
@@ -36,12 +42,17 @@
         "bundled",
         "button",
         "by",
+        "c",
+        "calender",
         "can",
+        "card",
         "cdn",
         "chagoler",
         "charset",
         "chay",
+        "choosealicense",
         "class",
+        "click",
         "client",
         "color",
         "com",
@@ -49,27 +60,34 @@
         "const",
         "container",
         "content",
+        "core",
         "correctly",
         "create",
         "created",
         "crossorigin",
         "css",
         "d",
+        "data",
         "decoration",
         "default",
         "dekhechi",
         "dekhlam",
         "description",
         "desktop",
+        "details",
         "developers",
         "development",
         "device",
+        "different",
         "directly",
         "dist",
         "div",
+        "do",
         "doctype",
         "dom",
         "during",
+        "easily",
+        "effect",
         "empty",
         "en",
         "enable",
@@ -78,28 +96,41 @@
         "export",
         "f",
         "fa",
+        "fab",
+        "facebook",
         "faltu",
         "favicon",
+        "feautures",
+        "female",
+        "fetch",
         "file",
         "files",
+        "find",
+        "flag",
         "flatuj",
         "flex",
         "fluid",
         "folder",
         "font",
         "fontawesome",
+        "formed",
         "fortawesome",
+        "founded",
         "free",
         "from",
         "fuchka",
         "fundamentals",
+        "futbol",
         "gachpala",
+        "gender",
         "ghum",
         "google",
         "gorjon",
         "h",
         "habi",
         "head",
+        "help",
+        "here",
         "hoilam",
         "home",
         "how",
@@ -116,16 +147,22 @@
         "img",
         "import",
         "in",
+        "info",
         "initial",
         "inside",
+        "insta",
+        "instagram",
         "installed",
+        "int",
         "integrity",
+        "interactions",
         "into",
         "is",
         "it",
         "jabi",
         "java",
         "jpg",
+        "js",
         "jsdelivr",
         "json",
         "jx",
@@ -141,20 +178,28 @@
         "lage",
         "lang",
         "lc",
+        "league",
         "learn",
         "li",
+        "licenses",
         "light",
         "link",
+        "live",
         "lockdowne",
         "logo",
+        "lookupteam",
         "lrc",
         "m",
+        "male",
         "mania",
         "manifest",
+        "mars",
         "me",
+        "mentioned",
         "meta",
         "metadata",
         "min",
+        "mit",
         "mobile",
         "n",
         "nachte",
@@ -164,6 +209,7 @@
         "navbar",
         "need",
         "net",
+        "netlify",
         "nj",
         "nodi",
         "non",
@@ -177,15 +223,19 @@
         "only",
         "open",
         "or",
+        "p",
         "page",
         "pahar",
         "par",
+        "params",
         "paya",
+        "php",
         "place",
         "png",
         "porbot",
         "porota",
         "production",
+        "project",
         "props",
         "provides",
         "public",
@@ -195,9 +245,11 @@
         "referenced",
         "rel",
         "replaced",
+        "res",
         "return",
         "right",
         "root",
+        "route",
         "router",
         "routing",
         "ru",
@@ -210,16 +262,21 @@
         "script",
         "scripts",
         "see",
+        "set",
         "sha",
         "side",
         "site",
         "soccer",
+        "social",
         "sokale",
         "solid",
+        "some",
         "somudrer",
         "sport",
         "src",
+        "stadium",
         "start",
+        "state",
         "stedium",
         "step",
         "str",
@@ -227,23 +284,31 @@
         "stylesheet",
         "sunechi",
         "svg",
+        "switch",
         "sx",
         "sz",
         "t",
         "tag",
         "tags",
         "team",
+        "team's",
         "teams",
+        "technologies",
         "template",
         "text",
         "thaki",
         "the",
+        "their",
         "theke",
         "theme",
+        "then",
+        "thesportsdb",
+        "they",
         "this",
         "title",
         "to",
         "touch",
+        "twitter",
         "type",
         "u",
         "ul",
@@ -251,25 +316,34 @@
         "url",
         "use",
         "used",
+        "user",
         "user's",
         "using",
         "utbo",
         "utf",
+        "v",
         "vaji",
         "valo",
+        "vanilla",
         "viewport",
+        "visual",
         "vz",
         "w",
         "web",
         "webfonts",
+        "website",
+        "weight",
         "when",
+        "where",
         "width",
         "will",
         "with",
         "wlolflfl",
         "work",
         "wuq",
+        "www",
         "yarn",
+        "year",
         "you",
         "your",
         "yr"
